--- a/Frontend/src/pages/Dashboard.module.css
+++ b/Frontend/src/pages/Dashboard.module.css
@@ -179,6 +179,9 @@
     }
 }
   @media (max-width: 456px) {
+    body{
+      overflow:hidden;
+    }
     .head-container1{
       width: 100%;
       height: 7vh;
