--- a/Frontend/src/pages/Dashboard.module.css
+++ b/Frontend/src/pages/Dashboard.module.css
@@ -10,8 +10,8 @@
 
   .dashboard-container {
       display: flex;
-      width: 100vw;
-      height: 90vh;
+      width: 100dvw;
+      height: 100dvh;
       font-family: Poppins;
     }
     
@@ -211,8 +211,8 @@
       overflow: hidden;
       display: flex;
      flex-direction: column;
-      width: 99vw;
-      height: 99vh;
+      width: 100dvw;
+      height: 100dvh;
       font-family: Poppins;
       padding: 1%;
     }
