--- a/Frontend/src/pages/Home.module.css
+++ b/Frontend/src/pages/Home.module.css
@@ -1,7 +1,7 @@
 
 .home{
     padding: 3%;
-    width: 100%;
+    width: 100dvw;
     height: auto;
     overflow-x: hidden;
     overflow-y: auto;
@@ -257,7 +257,7 @@
 @media (max-width: 456px) {
     .home{
         padding: 3%;
-        width: 100%;
+        width: 100dvw;
         height: auto;
         overflow-x: hidden;
         overflow-y: auto;
