--- a/Frontend/src/pages/Login.module.css
+++ b/Frontend/src/pages/Login.module.css
@@ -1,8 +1,8 @@
 
 .logincontainer{
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
     font-family: Poppins;
 }
 *{
@@ -60,8 +60,8 @@
 }
 @media (max-width: 456px) {
     .logincontainer{
-        height: 100vh;
-        width: 100vw;
+        height: 100dvh;
+        width: 100dvw;
         padding: 2%;
         overflow: hidden;
     }
