--- a/Frontend/src/pages/Tellusyourname.module.css
+++ b/Frontend/src/pages/Tellusyourname.module.css
@@ -1,8 +1,8 @@
 
 .logincontainer1{
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
     font-family: 'Poppins', sans-serif;
 }
 *{
